--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,17 @@
+server:
+  port: 8761
 spring:
   application.name: registryms
+
 eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
-server:
-  port: 8761
+
+management:
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411 # Replace with your Zipkin server URL
+  tracing:
+    sampling:
+      probability: 1.0 # Set to 1.0 for sampling all requests
