--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>registryms</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
